--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "widehub",
 	"description": "Make code wider",
-	"version": "1.1",
+	"version": "1.2",
 	"content_scripts": [
 		{
 			"matches": ["https://github.com/*"],
@@ -14,12 +14,8 @@
 			"js": ["jquery-2.1.1.js", "widehub_blob.js"]
 		},
 		{
-			"matches": ["https://github.com/*commit*/*diff=split"],
-			"js": ["jquery-2.1.1.js", "widehub_commit_split_diff.js"]
-		},
-		{
-			"matches": ["https://github.com/*commit*/*diff=unified"],
-			"js": ["jquery-2.1.1.js", "widehub_commit_unified_diff.js"]
+			"matches": ["https://github.com/*commit*"],
+			"js": ["jquery-2.1.1.js", "widehub_commit.js"]
 		}
 	]	
 }
